[package]
name = "named_pipe"
version = "0.2.0"
authors = ["Anatoly Ikorsky <aikorsky@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Wrapper for overlapped (asyncronous) IO of Windows's named pipes"
repository = "https://github.com/blackbeam/named_pipe"
documentation = "https://blackbeam.github.io/named_pipe/named_pipe/index.html"
readme = "README.md"
keywords = ["windows", "named", "pipes"]
crate-type = ["lib"]

[dependencies]
winapi = "~0.2.2"
kernel32-sys = "~0.1.4"

[profile.test]
opt-level = 0
debug = true
