[package]
name = "named_pipe"
version = "0.4.0"
authors = ["Anatoly Ikorsky <aikorsky@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Wrapper for overlapped (asyncronous) IO of Windows's named pipes"
repository = "https://github.com/blackbeam/named_pipe"
documentation = "https://blackbeam.github.io/named_pipe/named_pipe/index.html"
readme = "README.md"
keywords = ["windows", "named", "pipes"]
edition = "2018"

[dependencies.winapi]
version = "0.3"
features = ["errhandlingapi", "handleapi", "ioapiset", "minwindef", "namedpipeapi", "synchapi", "winbase", "winerror"]

[profile.test]
opt-level = 0
debug = true
